Resolve flickering between each page load

--- a/src/scss/styles/typography.scss
+++ b/src/scss/styles/typography.scss
@@ -1,8 +1,5 @@
-// @import "/_dist/fonts/fonts.css";
-
 :root {
-	// --font-family: Manrope, -apple-system, system-ui, sans-serif;
-	--font-family: -apple-system, system-ui, sans-serif;
+	--font-family: Manrope, -apple-system, system-ui, sans-serif;
 	--font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono,
 		Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono,
 		Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New,
